@@ -1,8 +1,8 @@
 Package: tigerstats
 Type: Package
 Title: R Functions for Elementary Statistics
-Version: 0.3
-Date: 2016-12-16
+Version: 0.3.1
+Date: 2019-20-19
 Author: Rebekah Robinson <rebekahrobinson14@gmail.com> and Homer
     White <hwhite0@georgetowncollege.edu>
 Maintainer: Homer White <hwhite0@georgetowncollege.edu>
@@ -34,6 +34,7 @@ Suggests:
     shinyjs
 LazyLoad: yes
 LazyData: true
+Encoding: UTF-8
 NeedsCompilation: no
 Packaged: 2015-12-16 23:47:17 UTC; homer
 RoxygenNote: 6.1.1
