@@ -59,6 +59,8 @@ export(tSampler)
 export(theme.rpres)
 export(themerpres)
 export(ttestGC)
+export(watch_statisticians)
+export(watch_statisticians_slow)
 import(abd)
 import(mosaicData)
 importFrom(MASS,mvrnorm)
@@ -113,6 +115,7 @@ importFrom(stats,qt)
 importFrom(stats,quantile)
 importFrom(stats,r2dtable)
 importFrom(stats,rbeta)
+importFrom(stats,rbinom)
 importFrom(stats,resid)
 importFrom(stats,rmultinom)
 importFrom(stats,rnorm)
